removed unused AuthenticationProvider class, SecurityConfig refactor