@@ -1,38 +1,23 @@
 package com.codecool.CodeCoolProjectGrande.user.configuration;
 
-
-import com.codecool.CodeCoolProjectGrande.user.jwt.AuthEntryPointJwt;
 import com.codecool.CodeCoolProjectGrande.user.jwt.AuthTokenFilter;
 import com.codecool.CodeCoolProjectGrande.user.jwt.JwtUtils;
-import com.codecool.CodeCoolProjectGrande.user.repository.UserDetailsServiceImpl;
-import com.codecool.CodeCoolProjectGrande.user.service.UserServiceImpl;
+import com.codecool.CodeCoolProjectGrande.user.service.UserDetailsServiceImpl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.AuthenticationFailureHandler;
-import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 
 @Configuration
@@ -42,32 +27,26 @@ public class SecurityConfig {
     private static final String USER = "USER";
 
     private static final int ENCODING_STRENGTH = 10;
-    private final AuthEntryPointJwt unauthorizedHandler;
     private final UserDetailsServiceImpl userDetailsService;
 
     @Autowired
-    public SecurityConfig(AuthEntryPointJwt unauthorizedHandler, UserDetailsServiceImpl userDetailsService) {
-        this.unauthorizedHandler = unauthorizedHandler;
+    public SecurityConfig(UserDetailsServiceImpl userDetailsService) {
         this.userDetailsService = userDetailsService;
     }
 
     @Bean
     SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http) throws Exception {
         http
-//                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS).and().exceptionHandling().authenticationEntryPoint(unauthorizedHandler).and()
-                .cors().configurationSource(new CorsConfigurationSource() {
-            @Override
-            public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                CorsConfiguration config = new CorsConfiguration();
-                config.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
-                config.setAllowedMethods(Collections.singletonList("*"));
-                config.setAllowCredentials(true);
-                config.setAllowedHeaders(Collections.singletonList("*"));
-                config.setExposedHeaders(Arrays.asList("Authorization")); // added
-                config.setMaxAge(3600L);
-                return config;
-            }
-        })
+                .cors().configurationSource(request -> {
+                    CorsConfiguration config = new CorsConfiguration();
+                    config.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
+                    config.setAllowedMethods(Collections.singletonList("*"));
+                    config.setAllowCredentials(true);
+                    config.setAllowedHeaders(Collections.singletonList("*"));
+                    config.setExposedHeaders(List.of("Authorization")); // added
+                    config.setMaxAge(3600L);
+                    return config;
+                })
                 .and()
                 .csrf().disable()
                 .authorizeRequests()
@@ -76,13 +55,10 @@ public class SecurityConfig {
                 .and()
                 .oauth2Login()
                 .defaultSuccessUrl("http://localhost:3000/", true)
-                .successHandler(new AuthenticationSuccessHandler() {
-                    @Override
-                    public void onAuthenticationSuccess(HttpServletRequest request, HttpServletResponse response, Authentication authentication) throws IOException, ServletException {
-                        OAuth2User oAuth2User = (OAuth2User) authentication.getPrincipal();
-                        userDetailsService.processOauthUser(oAuth2User, passwordEncoder().encode("Notprovided231"));
-                        response.sendRedirect("http://localhost:3000/");
-                    }
+                .successHandler((request, response, authentication) -> {
+                    OAuth2User oAuth2User = (OAuth2User) authentication.getPrincipal();
+                    userDetailsService.processOauthUser(oAuth2User, passwordEncoder().encode("Notprovided231"));
+                    response.sendRedirect("http://localhost:3000/");
                 });
 
         return http.build();
